--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
     </div>
     <div id="pixel">
-        <div class="fix" style="border: 3px solid whitesmoke;">
+        <div class="fix">
             <nav class="nav">
                 <div class="nav_div">
                     <a href="#up"><img src="img/logo2.png   " alt="" style="width: 220px;scroll-behavior: smooth;"></a>
