--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/adaptive.css"> -->
     <link rel="stylesheet" href="build/css/style.css">
-        
-
+    <link rel="stylesheet" href="css/animate.min.css">
 </head>
 <body>
     <div class="preloader">
@@ -28,15 +27,15 @@
     <div class="promo bg" id="up">
         <div class="wrap">
             <div class="promo_inf" style="color: white;">
-                <a href="index.html"><img src="img/logo.png" alt="logo" class="logo"></a>
-                <h2 class="name_logo">Разработка сайтов любой сложности</h2>
-                <p class="text">FastStart - команда опытных профессионалов по реализации задач любой сложности в области web-разработки и программирования. В кратчайшие сроки мы реализуем все ваши идеи и мысли и дадим мощный толчок вашему бизнесу!</p>
+                <a href="index.html"><img src="img/logo.png" alt="logo" class="wow logo animate slideInDown"></a>
+                <h2 class="wow name_logo animate slideInLeft">Разработка сайтов любой сложности</h2>
+                <p class="wow text animate slideInLeft">FastStart - команда опытных профессионалов по реализации задач любой сложности в области web-разработки и программирования. В кратчайшие сроки мы реализуем все ваши идеи и мысли и дадим мощный толчок вашему бизнесу!</p>
                 <div>
-                    <a href="#info"><button class="but_bl">О нас</button></a>
-                    <a href="#price"><button class="but">Стоимость</button></a>
+                    <a href="#info"><button class="but_bl wow animated slideInUp">О нас</button></a>
+                    <a href="#price"><button class="but wow animated slideInUp" data-wow-delay="0.2s">Стоимость</button></a>
                 </div>
             </div>
-            <div class="promo_inp">
+            <div class="wow promo_inp animate slideInRight">
                 <h3 style="font-size: 23px; margin: 10px; font-family: var(--font);">СВЯЖИТЕСЬ СО МНОЙ</h3>
                 <form action="">
                     <div>
@@ -75,11 +74,11 @@
     </div>
     <div class="promo" id="info">
         <div class="wrap">
-            <div class="promo_inf"><img class="img_intro" src="img/intro-image.jpg" alt=""></div>
+            <div class="promo_inf"><img class="img_intro wow animated slideInDown" src="img/intro-image.jpg" alt=""></div>
             <div class="pr_inf">
-                <h3 class="head_text">Наша главная задача - сделать ваш бизнес в интернете уникальным.</h3>
-                <p class="text">Для нас нет сложных задач. Мы разрабатываем не просто интернет-ресурсы для бизнеса, а создаем уникальные сайты и порталы, которые максимально удовлетворяют потребности любого, даже самого требовательного, пользователя.</p>
-                <a href="#grey"><button class="but">Подробнее</button></a>
+                <h3 class="head_text wow animated slideInLeft">Наша главная задача - сделать ваш бизнес в интернете уникальным.</h3>
+                <p class="text wow animated slideInRight">Для нас нет сложных задач. Мы разрабатываем не просто интернет-ресурсы для бизнеса, а создаем уникальные сайты и порталы, которые максимально удовлетворяют потребности любого, даже самого требовательного, пользователя.</p>
+                <a href="#grey"><button class="but wow animated slideInUp" data-wow-offset="1">Подробнее</button></a>
             </div>
         </div>
     </div>
@@ -88,20 +87,20 @@
             <div class="wrap">
                 <div>
                     <div class="punt">
-                        <h3 class="head_text">Превращаем самые невероятные идеи в реальность</h3>
-                        <p class="text">Если вы еще не знаете чего хотите, то мы придумаем все за вас!</p>
+                        <h3 class="head_text wow animated slideInLeft" >Превращаем самые невероятные идеи в реальность</h3>
+                        <p class="text wow animated slideInRight">Если вы еще не знаете чего хотите, то мы придумаем все за вас!</p>
                     </div>
                     <div class="feature_inf" style="margin-top: 30px;">
-                        <div><img class="img_feature" src="img/feature-image.jpg" alt=""></div>  
+                        <div><img class="img_feature wow animated slideInUp" src="img/feature-image.jpg" alt=""></div>  
                         <div class="punto">
-                            <div class="cart">
+                            <div class="cart wow animated slideInRight">
                                 <img src="icons/ic1.png" alt="" class="icon_anim" >
                                 <div style="width: 280px;">
                                     <h4 class="text" style="font-size: 20px; font-weight: bold; color: purple;">Уникальный подход</h4>
                                     <p class="text" style="color: darkblue;">Мы подходим к идеям разработки с самых необычных сторон, что позволяет удивлять будущих пользователей.</p>
                                 </div>
                             </div>
-                            <div class="cart" >
+                            <div class="cart wow animated slideInDown" >
                                 <img src="icons/ic3.png" alt="" class="icon_anim">
                                 <div style="width: 280px;">
                                     <h4 class="text" style="font-size: 20px; font-weight: bold; color: purple;">Повышение функционала</h4>
@@ -110,14 +109,14 @@
                             </div>
                         </div> 
                         <div>
-                            <div class="cart">
+                            <div class="cart wow animated slideInUp">
                                 <img src="icons/ic2.png" alt="" class="icon_anim">
                                 <div style="width: 280px;">
                                     <h4 class="text" style="font-size: 20px; font-weight: bold; color: purple;">Монетизация</h4>
                                     <p class="text" style="color: darkblue;">Правильный дизайн быстро приводит потенциальных клиентов к покупке, поэтому наша команда уделяет этому самую важную роль.</p>
                                 </div>
                             </div>             
-                            <div class="cart">
+                            <div class="cart wow animated slideInLeft">
                                 <img src="icons/ic4.png" alt="" class="icon_anim" >
                                 <div style="width: 280px;">
                                     <h4 class="text" style="font-size: 20px; font-weight: bold; color: purple;">Оптимизация процессов</h4>
@@ -132,23 +131,23 @@
     </div>
     <div class="promo">
         <div class="wrap">
-            <div class="promo_inf_too see"><img class="img_intro" src="img/feature2-image.jpg" alt=""></div>
+            <div class="promo_inf_too see wow animated slideInRight"><img class="img_intro" src="img/feature2-image.jpg" alt=""></div>
             <div class="pr_inf">
-                <h3 class="head_text">Качественный сайт в разумные сроки</h3>
-                <p class="text">За счёт оптимизации внутренних процессов, многие работы по разработке сайта выполняются параллельно. Это позволяет нам сократить время выкладки сайта, не увеличивая при этом итоговую цену.</p>
-                <p class="text">Стоимость разработки сайта считается исходя из необходимого функционала и трудозатрат. При ограниченном бюджете есть возможность упростить некоторые этапы или изменить перечень функционала. Стоимость создания проекта начинается от 15 000 руб.</p>
-                <a href="#price"><button class="but" style="width: 230px;">Узнать стоимость</button></a>
+                <h3 class="head_text wow animated slideInLeft">Качественный сайт в разумные сроки</h3>
+                <p class="text wow animated slideInUp">За счёт оптимизации внутренних процессов, многие работы по разработке сайта выполняются параллельно. Это позволяет нам сократить время выкладки сайта, не увеличивая при этом итоговую цену.</p>
+                <p class="text wow animated slideInDown">Стоимость разработки сайта считается исходя из необходимого функционала и трудозатрат. При ограниченном бюджете есть возможность упростить некоторые этапы или изменить перечень функционала. Стоимость создания проекта начинается от 15 000 руб.</p>
+                <a href="#price"><button class="but wow animated slideInUp" style="width: 230px;">Узнать стоимость</button></a>
             </div>
-            <div class="promo_inf_too none"><img class="img_intro" src="img/feature2-image.jpg" alt=""></div>
+            <div class="promo_inf_too none"><img class="img_intro wow animated slideInRight" src="img/feature2-image.jpg" alt=""></div>
         </div>
     </div>
     <div class="promo bg" id="feature">
         <div class="wrap">
             <div style="color:white;">
                 <div class="punt adapt">
-                    <h3 class="head_text" style="text-align: center;">Хотите узнать, как развить свой бизнес?</h3>
-                    <p class="text" style="text-align: center;">Свяжитесь с нами и мы расскажем о том, что подойдет именно для вашего бизнеса и какие инструменты мы будем использовать.</p>
-                    <a href="#contact"><button class="but_pr text" style="width: 260px; height: 60px;">Связаться с нами</button></a>
+                    <h3 class="wow head_text animated slideInLeft" style="text-align: center;">Хотите узнать, как развить свой бизнес?</h3>
+                    <p class="text wow animated slideInRight" style="text-align: center;">Свяжитесь с нами и мы расскажем о том, что подойдет именно для вашего бизнеса и какие инструменты мы будем использовать.</p>
+                    <a href="#contact"><button class="but_pr text wow animated slideInUp" style="width: 260px; height: 60px;">Связаться с нами</button></a>
                 </div>
             </div>
         </div>
@@ -156,11 +155,11 @@
     <div class="promo" id="price">
         <div class="wrap">
             <div class="punt adapt" >
-                <h2 class="head_text" style="font-size: 31px;">СТОИМОСТЬ</h2>
+                <h2 class="head_text wow animated slideInDown" style="font-size: 31px;">СТОИМОСТЬ</h2>
                 <div class="line"></div>
                 <div class="feature_inf">
                     <div id="box_adapt">
-                        <div class="box">
+                        <div class="box wow animated slideInUp">
                             <div class="punt">
                                 <img src="icons/icons8-карточка-контакта-64.png" alt="" style="width: 75px; margin: 12px;">
                                 <h3 style="font-size: 24px;">Сайт-визитка</h3>
@@ -193,7 +192,7 @@
                                 <a href="#contact" ><button class="but_pr text" style="width: 160px; height: 45px;">заказать</button></a>
                             </div>
                         </div>
-                        <div class="box">
+                        <div class="box wow animated slideInUp" data-wow-delay="0.2s">
                             <div class="punt">
                                 <img src="icons/icons8-контроллер-64.png" alt="" style="width: 75px; margin: 12px;">
                                 <h3 style="font-size: 24px;">Сайт компании</h3>
@@ -228,7 +227,7 @@
                         </div>
                     </div>
                     <div id="box_adapt">
-                                <div class="box">
+                                <div class="box wow animated slideInUp" data-wow-delay="0.4s">
                                     <div class="punt">
                                         <img src="icons/icons8-shopify-64.png" alt="" style="width: 75px; margin: 12px;">
                                         <h3 style="font-size: 24px;">Магазин</h3>
@@ -260,7 +259,7 @@
                                         <a href="#contact" ><button class="but_pr text" style="width: 160px; height: 45px;">заказать</button></a>
                                     </div>
                                 </div>
-                                <div class="box">
+                                <div class="box wow animated slideInUp" data-wow-delay="0.6s">
                                     <div class="punt">
                                         <img src="icons/icons8-ноутбук-80.png" alt="" style="width: 75px; margin: 12px;">
                                         <h3 style="font-size: 24px;">Интернет-портал</h3>
@@ -304,10 +303,10 @@
                     <h2 class="head_text" style="font-size: 31px;">НАШИ КЛИЕНТЫ</h2>
                     <div class="line"></div>
                     <div class="friends">
-                        <img src="img/event.png" alt="" class="friend">
-                        <img src="img/finnair.png" alt="" class="friend">
-                        <img src="img/Letidor.png" alt="" class="friend">
-                        <img src="img/viking.png" alt="" class="friend">
+                        <img src="img/event.png" alt="" class="friend wow animated slideInLeft" data-wow-delay="0.4s">
+                        <img src="img/finnair.png" alt="" class="friend wow animated slideInLeft">
+                        <img src="img/Letidor.png" alt="" class="friend wow animated slideInRight" data-wow-delay="0.2s">
+                        <img src="img/viking.png" alt="" class="friend wow animated slideInRight" data-wow-delay="0.6s">
                     </div>
                 </div>
             </div>
@@ -316,9 +315,9 @@
     <div class="promo" id="otz">
         <div class="wrap ">
             <div class="punt adapt" >
-                <h2 class="head_text" style="font-size: 31px;">ОТЗЫВЫ</h2>
+                <h2 class="head_text wow animated slideInUp" style="font-size: 31px;">ОТЗЫВЫ</h2>
                 <div class="line"></div>
-                <div class="one-time " style="display: flex; flex-direction: row;">
+                <div class="one-time wow animated slideInLeft " style="display: flex; flex-direction: row;">
                     <div class="punt" >
                         <div class="img_slider">
                             <img src="img/baklanov.jpg" alt="" class="slider_img">
@@ -353,21 +352,21 @@
     <div class="promo bg" id="contact">
         <div class="wrap">
             <div class="promo_inf" style="color: white; line-height: 0;">
-                <h3 class="name_logo" style="font-size: 33px; font-weight: bold; display: flex;"><div style="margin-right: 10px; color: #48a3f8;">Свяжитесь</div> с нами</h3>
-                <div style="display: flex;">
+                <h3 class="name_logo wow animated slideInLeft"  style="font-size: 33px; font-weight: bold; display: flex;"><div style="margin-right: 10px; color: #48a3f8;">Свяжитесь</div> с нами</h3>
+                <div style="display: flex;" class="wow animated slideInLeft" data-wow-delay="0.2s">
                     <img src="icons/icons8-маркер-40.png" alt="" class="ic">
                     <p class="text">Большая Спасская ул. 12 <br> Москва, Россия</p>
                 </div>
-                <div style="display: flex;">
+                <div style="display: flex;" class="wow animated slideInLeft" data-wow-delay="0.4s">
                     <img src="icons/icons8-телефон-40.png" alt="" class="ic">
                     <p class="text">8(495)626-46-00</p>
                 </div>
                 <div style="display: flex; flex-direction: column;">
-                    <div style="display: flex;">
+                    <div style="display: flex;" class="wow animated slideInLeft" data-wow-delay="0.6s">
                         <img src="icons/icons8-почта-50.png" alt="" class="ic">
                         <a href="mailto:moscow@faststart.ru" class="text" id="contact_hover">moscow@faststart.ru</a>
                     </div>
-                    <div style="display: flex;">
+                    <div style="display: flex;" class="wow animated slideInLeft" data-wow-delay="0.8s">
                         <img src="icons/icons8-интернет-40.png" alt="" class="ic">
                         <a href="#" class="text" id="contact_hover">www.faststart.ru</a>
                     </div>
@@ -376,30 +375,34 @@
             <div class="promo_inf">
                 <form action="" style="display: flex; flex-direction: column; align-items: center;">
                     <div>
-                        <input class="input_pr img_intro" name="name" type="text" placeholder="Ваше имя" required>
+                        <input class="input_pr img_intro wow animated slideInRight" data-wow-delay="0.2s" name="name" type="text" placeholder="Ваше имя" required>
                     </div>
                     <div>
-                        <input class="input_pr img_intro" name="email"  type="email" placeholder="Ваш e-mail" required>
+                        <input class="input_pr img_intro wow animated slideInRight" data-wow-delay="0.4s" name="email"  type="email" placeholder="Ваш e-mail" required>
                     </div>
                     <div>
-                        <textarea class="input_pr img_intro" style="height: 120px;" name="msg" cols="30" rows="10" placeholder="Я хочу..." required></textarea>
+                        <textarea class="input_pr img_intro wow animated slideInRight" data-wow-delay="0.6s" style="height: 120px;" name="msg" cols="30" rows="10" placeholder="Я хочу..." required></textarea>
                     </div>
                     <div>
-                        <input class="input_pr but_pr img_intro" type="submit" value="ОТПРАВИТЬ ЗАПРОС">
+                        <input class="input_pr but_pr img_intro wow animated slideInRight" data-wow-delay="0.8s" type="submit" value="ОТПРАВИТЬ ЗАПРОС">
                     </div>
             </div>
         </div>
     </div>
     <div class="promo">
         <div class="icon_wrap">
-            <a href="https://www.facebook.com/" class="icon_a"><div class="icon_an"><img src="icons/icons8-facebook-f-24.png" alt="" class="icon"></div></a>
-            <a href="https://www.instagram.com/" class="icon_a"><div class="icon_an"><img src="icons/icons8-instagram-26.png" alt="" class="icon"></div></a>
-            <a href="https://vk.com/" class="icon_a"><div class="icon_an"><img src="icons/vk.png" alt="" class="icon"></div></a>
-            <a href="https://twitter.com/" class="icon_a"><div class="icon_an"><img src="icons/twitter.png" alt="" class="icon"></div></a>
+            <a href="https://www.facebook.com/" class="icon_a wow animated slideInUp"><div class="icon_an"><img src="icons/icons8-facebook-f-24.png" alt="" class="icon"></div></a>
+            <a href="https://www.instagram.com/" class="icon_a wow animated slideInUp" data-wow-delay="0.2s"><div class="icon_an"><img src="icons/icons8-instagram-26.png" alt="" class="icon"></div></a>
+            <a href="https://vk.com/" class="icon_a wow animated slideInUp" data-wow-delay="0.4s"><div class="icon_an"><img src="icons/vk.png" alt="" class="icon"></div></a>
+            <a href="https://twitter.com/" class="icon_a wow animated slideInUp" data-wow-delay="0.6s"><div class="icon_an"><img src="icons/twitter.png" alt="" class="icon" ></div></a>
         </div>
     </div>
 </div>
 <script src="build/js/script.js"></script>
-    <script src="js/code.js"></script>
+<script src="js/code.js"></script>
+<script src="js/wow-min.js"></script>
+<script>
+    new WOW().init();
+</script>
 </body>
 </html>
