--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="#" class="arrow"><img src="icons/icons8-толстая-стрелка-вверх-24.png" alt=""></a>
     </div>
 </div>
-<div class="wrapper">
+<div class="wrapper" >
     <div class="promo bg" id="up">
         <div class="wrap">
             <div class="promo_inf" style="color: white;">
@@ -372,29 +372,29 @@
                     </div>
                 </div>
             </div>
-            <div class="promo_inf">
+            <div class="promo_inf" >
                 <form action="" style="display: flex; flex-direction: column; align-items: center;">
                     <div>
-                        <input class="input_pr img_intro wow animated slideInRight" data-wow-delay="0.2s" name="name" type="text" placeholder="Ваше имя" required>
+                        <input class="input_pr img_intro wow slideInRight" data-wow-delay="0.2s" name="name" type="text" placeholder="Ваше имя" required>
                     </div>
                     <div>
-                        <input class="input_pr img_intro wow animated slideInRight" data-wow-delay="0.4s" name="email"  type="email" placeholder="Ваш e-mail" required>
+                        <input class="input_pr img_intro wow slideInRight" data-wow-delay="0.4s" name="email"  type="email" placeholder="Ваш e-mail" required>
                     </div>
                     <div>
-                        <textarea class="input_pr img_intro wow animated slideInRight" data-wow-delay="0.6s" style="height: 120px;" name="msg" cols="30" rows="10" placeholder="Я хочу..." required></textarea>
+                        <textarea class="input_pr img_intro wow slideInRight" data-wow-delay="0.6s" style="height: 120px;" name="msg" cols="30" rows="10" placeholder="Я хочу..." required></textarea>
                     </div>
                     <div>
-                        <input class="input_pr but_pr img_intro wow animated slideInRight" data-wow-delay="0.8s" type="submit" value="ОТПРАВИТЬ ЗАПРОС">
+                        <input class="input_pr but_pr img_intro wow slideInRight" data-wow-delay="0.8s" type="submit" value="ОТПРАВИТЬ ЗАПРОС">
                     </div>
             </div>
         </div>
     </div>
     <div class="promo">
         <div class="icon_wrap">
-            <a href="https://www.facebook.com/" class="icon_a wow animated slideInUp"><div class="icon_an"><img src="icons/icons8-facebook-f-24.png" alt="" class="icon"></div></a>
-            <a href="https://www.instagram.com/" class="icon_a wow animated slideInUp" data-wow-delay="0.2s"><div class="icon_an"><img src="icons/icons8-instagram-26.png" alt="" class="icon"></div></a>
-            <a href="https://vk.com/" class="icon_a wow animated slideInUp" data-wow-delay="0.4s"><div class="icon_an"><img src="icons/vk.png" alt="" class="icon"></div></a>
-            <a href="https://twitter.com/" class="icon_a wow animated slideInUp" data-wow-delay="0.6s"><div class="icon_an"><img src="icons/twitter.png" alt="" class="icon" ></div></a>
+            <a href="https://www.facebook.com/" class="icon_a wow slideInUp"><div class="icon_an"><img src="icons/icons8-facebook-f-24.png" alt="" class="icon"></div></a>
+            <a href="https://www.instagram.com/" class="icon_a wow slideInUp" data-wow-delay="0.2s"><div class="icon_an"><img src="icons/icons8-instagram-26.png" alt="" class="icon"></div></a>
+            <a href="https://vk.com/" class="icon_a wow slideInUp" data-wow-delay="0.4s"><div class="icon_an"><img src="icons/vk.png" alt="" class="icon"></div></a>
+            <a href="https://twitter.com/" class="icon_a wow slideInUp" data-wow-delay="0.6s"><div class="icon_an"><img src="icons/twitter.png" alt="" class="icon" ></div></a>
         </div>
     </div>
 </div>
@@ -403,6 +403,6 @@
 <script src="js/wow-min.js"></script>
 <script>
     new WOW().init();
-</script>
+</script> 
 </body>
 </html>
