--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
     <div class="promo" id="info">
         <div class="wrap">
-            <div class="promo_inf"><img class="img_intro wow animated slideInDown" src="img/intro-image.jpg" alt=""></div>
+            <div class="promo_inf"><img class="img_intro" src="img/intro-image.jpg" alt=""></div>
             <div class="pr_inf">
                 <h3 class="head_text wow animated slideInLeft">Наша главная задача - сделать ваш бизнес в интернете уникальным.</h3>
                 <p class="text wow animated slideInRight">Для нас нет сложных задач. Мы разрабатываем не просто интернет-ресурсы для бизнеса, а создаем уникальные сайты и порталы, которые максимально удовлетворяют потребности любого, даже самого требовательного, пользователя.</p>
